// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Text css={}/>:  css prop (css string) should be handled 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  background-color: black;
  padding-left: 1023px;
}

<div
  class="c0"
/>
`;

exports[`Test <Text css={}/>:  css prop (object) should be handled 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  background-color: black;
  padding-left: 1023px;
}

<div
  class="c0"
/>
`;

exports[`Test <Text css={}/>:  css prop should be added 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  background-color: black;
}

<div
  class="c0"
/>
`;
